--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass main.scss css/styles.css",
+    "watch": "sass --watch main.scss css/styles.css"
   },
   "keywords": [],
   "author": "",
